--- a/Simulation/Simulation.vcxproj.filters
+++ b/Simulation/Simulation.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Simulation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="sim.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
