Add Timer class and integrate tester; update project files
Updated Simulation.vcxproj and Simulation.vcxproj.filters to include new source and header files. Removed obsolete commented-out code from sim.cpp. Added tester.cpp with a main function to measure elapsed time using the Timer class. Implemented Timer class in timer.cpp and declared it in timer.h.

--- a/Simulation/Simulation.vcxproj
+++ b/Simulation/Simulation.vcxproj
@@ -127,10 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="tester.cpp" />
     <ClCompile Include="sim.cpp" />
+    <ClCompile Include="timer.cpp" />
     <ClCompile Include="vector.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="timer.h" />
     <ClInclude Include="vector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
