Refactor project structure and update object handling
Updated `Simulation.vcxproj` to include new source and header files.
Updated `Simulation.vcxproj.filters` to include filters for `object.cpp` and `object.h`.
Removed `Timer`, `Object`, and `FileHandler` classes from `sim.cpp`.
Modified `tester.cpp` to include `object.h` and `vector.h`, and updated main function to manipulate `Object` instance.
Added `object.cpp` with `Object` class implementation.
Added `object.h` with `Object` class declaration.

--- a/Simulation/Simulation.vcxproj
+++ b/Simulation/Simulation.vcxproj
@@ -127,12 +127,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="object.cpp" />
     <ClCompile Include="tester.cpp" />
     <ClCompile Include="sim.cpp" />
     <ClCompile Include="timer.cpp" />
     <ClCompile Include="vector.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="object.h" />
     <ClInclude Include="timer.h" />
     <ClInclude Include="vector.h" />
   </ItemGroup>
