--- a/Simulation/Simulation.vcxproj
+++ b/Simulation/Simulation.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="confinement.cpp" />
     <ClCompile Include="object.cpp" />
     <ClCompile Include="tester.cpp" />
     <ClCompile Include="sim.cpp" />
@@ -134,6 +135,7 @@
     <ClCompile Include="vector.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="confinement.h" />
     <ClInclude Include="object.h" />
     <ClInclude Include="timer.h" />
     <ClInclude Include="vector.h" />
