Add new classes and update project configuration
- Added `fileHandler.cpp` and `simpleLife.cpp` to the `Simulation.vcxproj` project file.
- Added `fileHandler.h` and `simpleLife.h` to the `Simulation.vcxproj` project file.
- Updated `Simulation.vcxproj.filters` to include new files under appropriate filters.
- Removed the `Confinement` class definition from `sim.cpp`.
- Updated `tester.cpp` to include `simpleLife.h` and `confinement.h` headers, and modified the main function to use `Confinement` and `SimpleLife` objects.
- Added `PI` constant to `vector.h`.
- Implemented `FileHandler` class in `fileHandler.cpp` and defined it in `fileHandler.h`.
- Implemented `SimpleLife` class in `simpleLife.cpp` and defined it in `simpleLife.h`.

--- a/Simulation/Simulation.vcxproj
+++ b/Simulation/Simulation.vcxproj
@@ -128,7 +128,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="confinement.cpp" />
+    <ClCompile Include="fileHandler.cpp" />
     <ClCompile Include="object.cpp" />
+    <ClCompile Include="simpleLife.cpp" />
     <ClCompile Include="tester.cpp" />
     <ClCompile Include="sim.cpp" />
     <ClCompile Include="timer.cpp" />
@@ -136,7 +138,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="confinement.h" />
+    <ClInclude Include="fileHandler.h" />
     <ClInclude Include="object.h" />
+    <ClInclude Include="simpleLife.h" />
     <ClInclude Include="timer.h" />
     <ClInclude Include="vector.h" />
   </ItemGroup>
