Add Simulation class and update project files
- Updated `Simulation.vcxproj` to include `simulation.cpp` and `simulation.h`.
- Updated `Simulation.vcxproj.filters` to organize `simulation.cpp` and `simulation.h` under "Source Files" and "Header Files".
- Refactored `sim.cpp`:
  - Removed inclusion of `simpleLife.h`, `vector.h`, and `confinement.h`.
  - Removed `Simulation` class definition and methods.
  - Added inclusion of `simulation.h`.
  - Updated `main` function to:
    - Create `Simulation` instance with 60 TPS.
    - Create 1000x1000 meters confinement area.
    - Add life form "life1".
    - Generate and confirm random movement path for "life1" over 10 seconds.
    - Define target position and generate target movement path for "life1" over 10 seconds, then confirm.

--- a/Simulation/Simulation.vcxproj
+++ b/Simulation/Simulation.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="fileHandler.cpp" />
     <ClCompile Include="object.cpp" />
     <ClCompile Include="simpleLife.cpp" />
+    <ClCompile Include="simulation.cpp" />
     <ClCompile Include="tester.cpp" />
     <ClCompile Include="sim.cpp" />
     <ClCompile Include="timer.cpp" />
@@ -141,6 +142,7 @@
     <ClInclude Include="fileHandler.h" />
     <ClInclude Include="object.h" />
     <ClInclude Include="simpleLife.h" />
+    <ClInclude Include="simulation.h" />
     <ClInclude Include="timer.h" />
     <ClInclude Include="vector.h" />
   </ItemGroup>
